force-app/main/default/objects/geopointe__GP_Field_Mapping__c/geopointe__GP_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Global Business &amp; People Layers is no longer a part of Geopointe.</description>
    <label>Geopointe Field Mapping</label>
    <nameField>
        <label>Geopointe Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>