force-app/main/default/objects/geopointe__GP_Field_Mapping__c/fields/geopointe__Geopointe_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Field__c</fullName>
    <label>Geopointe Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>