force-app/main/default/objects/geopointe__GP_Field_Mapping__c/fields/geopointe__Required__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>